--- a/djangoProject3/templates/registration/base.html
+++ b/djangoProject3/templates/registration/base.html
@@ -18,7 +18,9 @@
 <body style="background-image: url('https://anhdepfree.com/wp-content/uploads/2022/12/hinh-nen-may-tinh-4k-chill_22343462136-1080x608.jpg')">
 <nav class="p-4 flex justify-between bg-green-800 text-white w-full">
 <div class="flex flex-col justify-center">
-    <p>Music World</p>
+    <p>
+        <a href="{% url 'music.all' %}"> Music World</a>
+        </p>
 </div>
 
 <h1 class="text-center text-4xl">
